--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+  <p>Now is <%= Time.now %></p>
+  <div class="container">
+  <p>welcome :)</p>
+  </div>
     <%= yield %>
   </body>
 </html>
